Home weiter angepasst

--- a/my-architecture-portfolio/public/index.html
+++ b/my-architecture-portfolio/public/index.html
@@ -24,6 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+<!-- Füge dies in den <head>-Bereich deiner public/index.html-Datei ein -->
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  integrity="sha384-SZXxX4whmUM5Gg2cM3o5LHwuj+SZCf+oCxrpiqfQNATcOzVdKiSL4FvZEMJ0Ud/2"
+  crossorigin="anonymous"
+/>
     <title>React App</title>
   </head>
   <body>
